added mongoose models, websocket, passport, jwt, nodemailer, basic middlewares
